Added logging and dll injection. Config file is now read to get the current keybinding setting.
I believe thats it but there might be more functionality added. Keybindings don't seem to work yet.

--- a/FPS/FPS.vcxproj.filters
+++ b/FPS/FPS.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="dllmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Logging.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Logging.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
