Added temporary config.json to be used for testing rapidjson's parsing, will be removed once the writing functionality is implemented.

--- a/Open FPS Overlay/Open FPS Overlay.vcxproj
+++ b/Open FPS Overlay/Open FPS Overlay.vcxproj
@@ -160,6 +160,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="config.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
